// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AccordionRow renders with complex content 1`] = `
<div>
  <div
    class="wcpay-accordion__row"
  >
    <div>
      <h3>
        Title
      </h3>
      <p>
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`AccordionRow renders with custom className 1`] = `
<div>
  <div
    class="wcpay-accordion__row custom-class"
  >
    Test Content
  </div>
</div>
`;

exports[`AccordionRow renders with default props 1`] = `
<div>
  <div
    class="wcpay-accordion__row"
  >
    Test Content
  </div>
</div>
`;
